--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/autocomplete": "^6.18.6",
     "@codemirror/lang-python": "^6.2.1",
     "@codemirror/lang-sql": "^6.9.0",
     "@codemirror/theme-one-dark": "^6.1.3",
@@ -18,6 +19,7 @@
     "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
